...
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:text="Not Registered ? Register Now !"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

...
